Incremented version to 2.0.0-SNAPSHOT. Updated dependencies and plugins to work with Java 11.