@@ -1,12 +1,15 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-    <!-- Last Updated: 20180407 -->
+    <!-- Last Updated: 20181111 -->
     <modelVersion>4.0.0</modelVersion>
+
+    <!-- Check for latest versions of dependencies using: mvn versions:display-dependency-updates -->
+    <!-- Check for latest versions of plugins using: mvn versions:display-plugin-updates -->
 
     <artifactId>zoikks-pom</artifactId>
     <groupId>org.zoikks.pom</groupId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <name>Zoikks POM</name>
     <packaging>pom</packaging>
     <description>Base pom used for building libraries/applications</description>
@@ -15,19 +18,21 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- JDK Version Information -->
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>                         <!-- Last updated 20181111 -->
 
         <!-- Dependency Version Declarations -->
         <junit.version>4.12</junit.version>                    <!-- Last updated 20170928 -->
-        <mockito.version>2.17.0</mockito.version>            <!-- Last updated 20180406 -->
-        <spring.boot.version>2.0.1.RELEASE</spring.boot.version>         <!-- Last updated 20180406 -->
+        <mockito.version>2.23.0</mockito.version>            <!-- Last updated 20181111 -->
+        <spring.boot.version>2.1.0.RELEASE</spring.boot.version>         <!-- Last updated 20181111 -->
         <jacoco.version>0.8.0</jacoco.version>          <!-- Last updated 20180103 -->
-        <slf4j.version>1.7.25</slf4j.version>
+        <slf4j.version>1.8.0-beta2</slf4j.version>          <!-- Last updated 20181111 -->
 
         <!-- Plugin Version Declarations -->
+        <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>     <!-- Last updated 20181111 -->
         <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>                <!-- Last updated 20170928 -->
-        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>    <!-- Last updated 20180103 -->
-        <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>    <!-- Last updated 20180103 -->
+        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>    <!-- Last updated 20180103 -->
+        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>    <!-- Last updated 20181111 -->
+        <maven-failsafe-plugin.version>2.22.0</maven-failsafe-plugin.version>
         <findbugs-maven-plugin.version>3.0.5</findbugs-maven-plugin.version>    <!-- Last updated 20180103 -->
         <maven-surefire-report-plugin.version>2.20.1 </maven-surefire-report-plugin.version>            <!-- Last updated 20170928 -->
         <maven-project-info-reports-plugin.version>2.9</maven-project-info-reports-plugin.version>    <!-- Last updated 20170928 -->
@@ -144,6 +149,26 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>${maven-enforcer-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>enforce-maven</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireMavenVersion>
+                                    <version>3.0</version>
+                                </requireMavenVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>${maven-jar-plugin.version}</version>
                 <configuration>
@@ -171,12 +196,28 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <release>${java.version}</release>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit                 <!-- Needed if dependencies make heavy use of reflection -->
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${maven-failsafe-plugin.version}</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit                 <!-- Needed if dependencies make heavy use of reflection -->
+                    </argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -197,6 +238,9 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
                 <version>${versions-maven-plugin.version}</version>
+                <configuration>
+                    <generateBackupPoms>false</generateBackupPoms>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
